--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -134,4 +134,17 @@ nav a.router-link-exact-active {
 .right-button {
     float:right;
 }
-  
+
+.center-x {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
