--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,6 +1,7 @@
 html,body {
     height: 100%;
     margin: 0px;
+    font-size: 15px;
 }
 
 #app {
@@ -13,12 +14,22 @@ html,body {
     height: 100vh;
   }
 
-#SearchHeader {
-    height: 30vh, 
-}
+
 
 #DocumentBody {
-    height: 70vh, 
+    margin-top: 120px;
+}
+
+#AppHeader {
+    position: fixed;
+    width: 100%; 
+    z-index: 1;
+    top: 0;
+}
+
+#SearchHeader {
+    position: fixed;
+    top: 0;
 }
 
 #mapContainer {
@@ -29,7 +40,9 @@ html,body {
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
+    z-index: 0;
 }
+
   
 nav {
     padding: 30px;
@@ -60,18 +73,23 @@ nav a.router-link-exact-active {
 
 /* OVERRIDE PRIMEVUE CLASSES */
 
-.p-button {
+.p-button-sm {
     font-size: 0.5rem !important;
-    padding: 0.5rem 0.5rem !important;
+    padding: 0.5rem 0.5rem;
 }
 
-.p-multiselect {
+.p-button {
+    font-size: 0.8rem;
+    padding: 0.5rem 0.5rem;
+}
+
+/* .p-multiselect {
     font-size: 0.5rem !important;
 }
 
 .p-multiselect-item {
     font-size: 0.5rem !important;
-}
+} */
 
 
 .float-left {
