--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -89,3 +89,8 @@ html,body {
     transform: translate(-50%, -50%);
     padding: 10px;
 }
+
+.tag-button {
+    padding: 0.25rem;
+    margin-top: 0.25rem;
+  }
