--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -91,6 +91,7 @@ html,body {
 }
 
 .tag-button {
-    padding: 0.25rem;
     margin-top: 0.25rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
   }
