added mosaic web api + location handling of web resources

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -65,6 +65,10 @@ html,body {
     margin-left:2px;
   }
 
+.float-right {
+    float:right;
+}
+
 .element-card {
     width: 100%;
     min-width: 5rem;
