--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -18,7 +18,7 @@ html,body {
 
 .p-button-sm {
     font-size: 0.5rem !important;
-    padding: 0.5rem 0.5rem;
+    /* padding: 0.5rem 0.5rem; */
 }
 
 .p-button {
